--- a/style.css
+++ b/style.css
@@ -1,58 +1,73 @@
 body {
-    background-color: #f1f1f1;
-    font-family: "Arial", sans-serif;
-    margin: 0;
-    padding: 0;
-  }
-  
-  h1 {
-    font-size: 2rem;
-    text-align: center;
-    padding-top: 100px;
-  }
-  
-  p {
-    font-size: 1.5rem;
-    font-weight: 600;
-    text-align: center;
-    margin-bottom: 0.5rem;
-  }
-  
-  .buttons {
-    display: flex;
-    justify-content: center;
-  }
-  
-  button {
-    border: none;
-    font-size: 3rem;
-    margin: 0 0.5rem;
-    padding: 0.5rem;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  button:hover {
-    opacity: 0.7;
-  }
-  
-  #rock {
-    background-color: #ff0000;
-  }
-  
-  #paper {
-    background-color: #2196f3;
-  }
-  
-  #scissors {
-    background-color: #4caf50;
-  }
-  
-  #user-score {
-    color: #2196f3;
-  }
-  
-  #computer-score {
-    color: #ff0000;
-  }
+  background-color: #f1f1f1;
+  font-family: "Arial", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 2rem;
+  text-align: center;
+  padding-top: 100px;
+}
+
+p {
+  font-size: 1.5rem;
+  font-weight: 600;
+  text-align: center;
+  margin-bottom: 0.5rem;
+}
+
+.scoreboard {
+  background: #80808038;
+  width: 100%;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 24px;
+  box-sizing: border-box;
+  margin-top: 10px;
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+}
+
+button {
+  border: none;
+  font-size: 3rem;
+  margin: 0 0.5rem;
+  padding: 0.5rem;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: all 0.1s ease-in-out;
+  width: 6rem;
+}
+
+button:hover {
+  opacity: 0.7;
+}
+
+#rock {
+  background-color: #ff0000;
+}
+
+#paper {
+  background-color: #2196f3;
+}
+
+#scissors {
+  background-color: #4caf50;
+}
+
+#user-score {
+  color: #2196f3;
+}
+
+#computer-score {
+  color: #ff0000;
+}
+
+#your-score {
+  color: green;
+}
